@@ -2,9 +2,14 @@ Revision history for Compression-Util
 
 0.04    2024-??-??
 
+        [ADDITIONS]
+
+        - Added the deltas() and its inverse, accumulate(), functions.
+
         [CHANGES]
 
         - Simplified deflate_encode() to always return a binary string (no longer writes to a file-handle).
+        - Improved the delta_encode() function to also use RLE when it's beneficial.
 
 0.03    2024-03-22
 
